# ai-compatible-v3

./: .gitignore  .pre-commit-config.yaml  Dockerfile  cloudbuild.yaml  pyproject.toml  test_ai_verify.py
client/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: BotStatusGrid.tsx  GradeBreakdown.tsx  IssuesList.tsx  LeadCaptureForm.tsx  LiveVerifyCard.tsx  ProgressOverlay.tsx  ScoreCard.tsx  VerificationForm.tsx
client/src/hooks/: useAnalysis.ts  useAuth.ts  useVerification.ts
client/src/lib/: api.ts  constants.ts
client/src/pages/: Admin.tsx  Home.tsx  Results.tsx
server/: config.py  db.py  main.py  schema.sql
server/data/: bot_user_agents.py  provider_crawl_config.py  provider_patterns.py  schema_specs.py  url_patterns.py
server/detectors/: ai_live_verify.py  base.py  blocking.py  bot_access.py  bot_protection.py  content_signal.py  faq_schema.py  ground_truth.py  inventory.py  llms_txt.py  markdown_agents.py  meta_tags.py  provider.py  robots.py  rsl.py  schema_parser.py  sitemap.py  vdp.py
server/models/: requests.py  responses.py  schemas.py
server/routes/: admin.py  analysis.py  auth.py  health.py  leads.py  verify.py
server/scoring/: recommendations.py  scorer.py
server/services/: analyzer.py  email.py  google_sheets.py  jwt_auth.py  sms.py  verification.py
shared/: types.ts
tests/: conftest.py  test_admin.py  test_auth.py  test_blocking.py  test_provider.py  test_robots.py  test_schema_parser.py  test_scoring.py  test_verification.py
