[project]
name = "ai-compatible-v3"
version = "3.0.0"
description = "AI Compatibility Analyzer for Car Dealership Websites"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "gspread>=6.1.0",
    "google-auth>=2.35.0",
    "resend>=2.5.0",
    "twilio>=9.0.0",
    "pyjwt>=2.9.0",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["server*", "tests*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
